updated NumberOfEvents component to do error handling and try to prevent the app from loadig events before the user has finished inputing the numbemr on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -95,6 +95,10 @@ p {
   margin: 0;
 }
 
+#event-number-input {
+  width: 9.5rem;
+}
+
 @media (min-width: 768px) {
   #event-list {
     padding-left: 4rem;
